# bounding-mesh

./: .dockerignore  CMakeLists.txt  LICENSE  README.md  ubuntu18.Dockerfile
Modules/: FindCoin.cmake  FindEigen.cmake  FindFreeSOLID.cmake  FindMPFR.cmake  FindQHULL.cmake
examples/bunny/: bunny.off  bunny_decimated.off
examples/teapot/: teapot.off  teapot.wrl  teapot_both_any.wrl  teapot_both_in.wrl  teapot_both_out.wrl  teapot_decimated.off  teapot_simplified_any.wrl  teapot_simplified_in.wrl  teapot_simplified_out.wrl
examples/torus/: torus.wrl  torus_both_any.wrl  torus_both_in.wrl  torus_both_out.wrl  torus_decimated.off  torus_simplified_any.wrl  torus_simplified_in.wrl  torus_simplified_out.wrl
examples/twotori/: twotori.wrl
src/boundingmesh/: BoundingMeshConfig.cmake.in  CMakeLists.txt  ContractionUtils.cpp  ContractionUtils.h  Decimator.cpp  Decimator.h  FileUtils.cpp  FileUtils.h  Mesh.cpp  Mesh.h  MetricGenerator.cpp  MetricGenerator.h  OptimizerInterface.h  OptimizerTest.cpp  Primitives.cpp  Primitives.h  Segmenter.h  SegmenterDownsampling.cpp  SegmenterDownsampling.h  SegmenterSimple.cpp  SegmenterSimple.h  SimpleOptimizer.cpp  SimpleOptimizer.h  Split.cpp  Split.h  VoxelSet.cpp  VoxelSet.h  VoxelSubset.cpp  VoxelSubset.h  boundingmesh-config.cmake.in  boundingmesh.h
src/boundingmesh-bin/: CMakeLists.txt  bounding-convex-decomposition-cli.cpp  boundingmesh-cli.cpp  main.cpp
src/boundingmesh-gui/: CMakeLists.txt  ViewerMesh.cpp  ViewerMesh.h  boundingmesh-gui.rc  gui.cpp  gui.h  res.qrc
src/extras/: CMakeLists.txt  measuring.cpp  measuring.h  measuring_main.cpp  utils.cpp  utils.h
src/test/: CMakeLists.txt  testCgalEigenQuadraticProgramming.cpp  testFigures.cpp  testFile.cpp
